--- a/fly.toml
+++ b/fly.toml
@@ -15,6 +15,7 @@ NODE_ENV = "production"
 PORT = "8080"
 ENABLE_PREMIUM_FEATURES = "false"
 DISABLE_SSO = "true"
+DISABLE_SIGNUP = "true"
 
 [[services.ports]]
 handlers = ["http"]
